# parawiki_automation

./: pyproject.toml
data/: cooking_recipes.json
src/parawiki_automation/: wiki_upload_recipes.py
