[project]
name = "parawiki-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.11"
dependencies = [
    "click>=8.1.8",
    "mwclient>=0.11.0",
]

[project.scripts]
wiki_upload_recipes = "parawiki_automation.wiki_upload_recipes:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
